# Resume-Matcher

./: .env  README.md  pyproject.toml
app/: main.py
app/core/: config.py  db.py  llm.py
app/data/faiss_index/: index.faiss  index.pkl
app/frontend/: main.py
app/routes/: resume.py
app/services/: matcher.py  resume_parser.py
resumes/: data-scientist-resume-sample.docx
